// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1000jours-blues: should return ml and pc 1`] = `
Array [
  Object {
    "declarationUrl": "https://1000jours-blues.fabrique.social.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://1000jours-blues.fabrique.social.gouv.fr/politique-confidentialite",
    "maxScore": 4,
    "mention": "Politique de confidentialité",
    "missingTrackers": Array [],
    "missingWords": Array [
      "durée de la conservation (ou) durée de conservation",
    ],
    "score": 3,
    "slug": "pc",
  },
]
`;

exports[`beta: should return ml and pc 1`] = `
Array [
  Object {
    "declarationUrl": "https://beta.gouv.fr/apropos/",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [
      "hébergeur (ou) hébergement (ou) hebergeur (ou) hebergement",
    ],
    "score": 3,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://beta.gouv.fr/suivi/",
    "maxScore": 4,
    "mention": "Données personnelles",
    "missingTrackers": Array [],
    "missingWords": Array [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`lba: should return ml and pc 1`] = `
Array [
  Object {
    "declarationUrl": "https://labonnealternance.apprentissage.beta.gouv.fr/mentions-legales",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 4,
    "slug": "ml",
  },
  Object {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should detect ml : mentions légales 1`] = `
Array [
  Object {
    "declarationUrl": "https://beta.gouv.fr/mentions",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [
      "directeur (ou) directrice",
      "publication",
      "hébergeur (ou) hébergement (ou) hebergeur (ou) hebergement",
      "éditeur (ou) édité par (ou) editeur (ou) edité par",
    ],
    "score": 0,
    "slug": "ml",
  },
  Object {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should detect pc : Données personnelles 1`] = `
Array [
  Object {
    "maxScore": 0,
    "mention": null,
    "missingTrackers": Array [],
    "missingWords": Array [],
    "score": 0,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://beta.gouv.fr/some",
    "maxScore": 4,
    "mention": "Données personnelles",
    "missingTrackers": Array [],
    "missingWords": Array [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;

exports[`should return ml and pc and thirdparties data 1`] = `
Array [
  Object {
    "declarationUrl": "https://beta.gouv.fr/apropos/",
    "maxScore": 4,
    "mention": "Mentions légales",
    "missingTrackers": Array [],
    "missingWords": Array [
      "hébergeur (ou) hébergement (ou) hebergeur (ou) hebergement",
    ],
    "score": 3,
    "slug": "ml",
  },
  Object {
    "declarationUrl": "https://beta.gouv.fr/suivi/",
    "maxScore": 5,
    "mention": "Données personnelles",
    "missingTrackers": Array [
      "jQuery",
    ],
    "missingWords": Array [
      "@",
      "finalité",
      "durée de la conservation (ou) durée de conservation",
      "sous-traitant (ou) sous traitant",
    ],
    "score": 0,
    "slug": "pc",
  },
]
`;
